--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-03",
+  "name": "goit-react-hw-06",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,12 +12,15 @@
   "author": "Viktoriia Kulyk <hamsteritta1808@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "modern-normalize": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
